# memory

./: .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .trigger-git-depth-fix  .trigger-new-token-test  .trigger-repo-vars-test  .trigger-workflow-scope-fix  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  LICENSE  MANIFEST.in  MEMORY-STRUCTURE.md  README.md  VALIDATION_WAVE1.md  VALIDATION_WAVE2.md  conftest.py  fix_tests.py  pr_body.txt  profiling_test.prof  profiling_test_section.prof  pyproject.toml  requirements-lock.txt  ruff.toml  verify_ci_config.sh  vulture_whitelist.py
.devcontainer/: devcontainer.json
.factory/: review-index.md
.factory/FEATURE_SUMMARY/: m3-d2-guard-truth-config.md
.factory/droids/: showdoc-plan-sync.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  feature_request.md
.github/workflows/: auto-review.yml  ci.yml  droid-review.yml  droid-wiki-refresh.yml  droid.yml  qa.yml  release-and-dispatch.yml  setup-labels.yml
analysis/: A1-architecture.md  A10-dataflow-and-side-effects.md  A2-gateway.md  A3-core.md  A4-interfaces.md  A5-impls.md  A6-config-schema.md  A7-adapters.md  A8-tests.md  A9-ops-tooling.md
archive/legacy-analysis/: ANALYSIS_GATEWAY_ADAPTER.md
archive/legacy-workbot/: README.md  projects-spec-axonhub-section.md
artifacts/memory-hook/: metrics.jsonl
audit/: AUDIT_01_tests.md  AUDIT_03_code_quality.md  AUDIT_05_interfaces.md  AUDIT_07_api_contract.md  AUDIT_09_combined.md  INDEPENDENT_03_error_handling.md  INDEPENDENT_04_documentation.md  INDEPENDENT_06_api_surface.md  INDEPENDENT_07_performance.md  INDEPENDENT_08_type_safety.md  INDEPENDENT_09_git_hygiene.md  INDEPENDENT_SUMMARY.md  REAUDIT_01_error_handling.md  REAUDIT_02_documentation.md  REAUDIT_03_api_surface.md  REAUDIT_04_performance.md  REAUDIT_05_type_safety.md  REAUDIT_06_git_hygiene.md  REAUDIT_07_test_quality.md  SUMMARY.md  official-skills-conflicts.md  official-skills-registry.md  overlay-registry.json  skill-overlay-checker.py  skills-conflicts.md  uncovered-official-skills.md  user-skills-registry.md
docs/: BOUNDARY.md  CI_CD_RUNBOOK.md  CLASSIFICATION.md  DISPATCH_TEMPLATE.md  DOCUMENTATION_ANALYSIS_REPORT.md  DOT_MEMORY_SPEC.md  EXECUTION_PLAN_OWNERSHIP_PROTECTION.md  FIXTURES_VS_REAL.md  INDEX.md  INTERNAL_SERVICE_RULES.md  MEMORY_LOCK_SPEC.md  MIGRATION_CHECKLIST.md  MIGRATION_FORMAT_SPEC.md  MIGRATION_RULES.md  MULTI_PROJECT_SCAN_SPEC.md  PLAN-STATUS.md  RESIDUE_DISPOSITION_PLAN.md  RESIDUE_INVENTORY.md  RUNBOOKS.md  SHOWDOC_FEISHU_SYNC_PLAN.md  SKILL_DROID_COLLAB_CHAIN.md  SKILL_ISOLATION_ARCHITECTURE.md  SYNC_WORKFLOW.md  TASK_CARD_TEMPLATE.md  cli_tools_analysis.md  code-quality-metrics.md  issue-triage-sop.md  otel-setup.md  skills-tree.md  sync_registry.yaml  typing-tech-debt.md
docs/api/: index.html  memory_core.html  search.js
docs/architecture/: 01-architecture.md  03-core-assembly.md  04-interfaces.md  05-implementations.md  10-consumer-boundary.md  INDEX.md  REF-000-architecture-audit-findings.md  REF-001-rule-engine-and-llm-isolation.md  error-gateway-pipeline.md  linear-factory-integration.md
docs/audit/: 2026-05-09-memory-core-audit.md
docs/guides/: byok-models.md  droid-computers.md  observability-and-error-tracking.md  posthog-error-insights.md  posthog-event-taxonomy.md  posthog-privacy.md  pr-workflow-redesign.md  test-droid-fix.md  test-droid-v2.md  test-droid-validation-1783945121.md  test-droid-validation.md  test-validation-positive.md
docs/infrastructure/: 1password-mcp.md  servers.md
docs/qa/: qa-report-template.md
docs/specs/: BOUNDARY.md  INDEX.md  MULTI_PROJECT_SCAN_SPEC.md
droid-wiki/systems/: hook-gateway.md
memory/: inbox.md
memory/docs/: INDEX.md
memory/kb/: INDEX.md
memory/log/: 2026-05-27.md
memory/system/: ownership.toml
memory_core/: INDEX.md  NOW.md  compat.py  constants.py  default_posthog_key.txt  ownership.py
memory_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
memory_core/.memory/: CANONICAL.md  PLAN.md  STATE.md
memory_core/project-map/: ingestion-registry-map.md  (+1 more)
project-map/: INDEX.md  ingestion-registry-map.md  legal-core-map.md
review/: 2026-04-27-10-reviewer-bug-report-v2.md  R1-impls-bugs.md  R2-gateway-bugs.md  R3-core-config-schema-bugs.md  R4-interfaces-business-policy-bugs.md  R5-ops-adapters-bugs.md
reviews/: 2026-04-27-10-reviewer-bug-report.md
scripts/: audit_telemetry_coverage.sh  check_boundary.py  check_doc_classification.py  check_droid_review.sh  ci_health_check.sh  gitlab_api_push.py  profiling_helper.py  push-migration.sh  push-projectmap.sh  release_rollback.sh  repo_health_check.sh  scan_tech_debt.py  sync_to_showdoc.py  test_full_integration.py  v5_duplicate_scan.py  validate_agents_md.py  write-pending-ci.sh
templates/: analyze-for-review.py
tests/: analysis_report_business_policy_tests.md  analysis_report_part2.md  conftest.py  test_abc_layer_signing.py  test_adapter_toml_global_kb.py  test_adapter_toml_strict.py  test_api_completion.py  test_apply_residue_plan.py  test_artifact_retention.py  test_async_health_check_observability.py  test_audit_project_layout.py  test_audit_remaining_coverage.py  test_audit_ssh_http_coverage.py  test_auto_capture.py  test_backward_compat.py  test_boundary_guard.py  test_business_policy_errors.py  test_business_policy_integration.py  test_business_policy_paths.py  test_business_policy_schema.py  test_business_policy_smoke.py  test_check_droid_review.py  test_claude_global_hooks.py  test_cli_init.py  test_cli_migrate.py  test_cmux_hook_state.py  test_cmux_hook_state_unit.py  test_codex_global_hooks.py  test_codex_session_analyzer.py  test_compat.py  test_config_validation.py  test_consistency_check.py  test_context_package_schema.py  test_core_config_path.py  test_cross_integrity_integration.py  test_cross_project_sedimentation.py  test_daily_audit_enhance.py  test_daily_kb_audit_coverage.py  test_daily_kb_audit_main.py  test_daily_kb_audit_source_repo.py  (+141 more)
workspace/: INDEX.md  NOW.md
(+302 files in other folders)
