[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-core"
version = "0.2.0"
description = "Independent memory hook core and gateway runtime."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]
license = "MIT"
authors = [
    { name = "busiji" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

keywords = ["memory", "hooks", "project-management", "schema"]

[project.urls]
Homepage = "https://github.com/hdot123/memory"
Repository = "https://github.com/hdot123/memory"
"Bug Tracker" = "https://github.com/hdot123/memory/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
memory-init = "memory_core.tools.init_project_memory:main"
memory-migrate = "memory_core.tools.migrate_project_memory:main"
memory-validate = "memory_core.tools.validate_project_memory:main"
memory-hook-gateway = "memory_core.tools.memory_hook_gateway:main"

[tool.setuptools.packages.find]
include = ["memory_core*"]

[tool.setuptools.package-data]
workspace = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F821", "F401", "E402", "E741"]
