[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-core"
version = "0.8.0"
description = "Independent memory hook core and gateway runtime."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]
license = "MIT"
authors = [
    { name = "busiji" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

keywords = ["memory", "hooks", "project-management", "schema"]

[project.urls]
Homepage = "https://github.com/hdot123/memory"
Repository = "https://github.com/hdot123/memory"
"Bug Tracker" = "https://github.com/hdot123/memory/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "pytest-cov>=5.0", "mypy>=1.10", "requests>=2.28"]

[project.scripts]
memory-promote = "memory_core.tools.promote_global_kb:main"
memory-init = "memory_core.tools.init_project_memory:main"
memory-migrate = "memory_core.tools.migrate_project_memory:main"
memory-validate = "memory_core.tools.validate_project_memory:main"
memory-hook-gateway = "memory_core.tools.memory_hook_gateway:main"
memory-factory-hooks = "memory_core.tools.factory_global_hooks:main"
memory-consistency-check = "memory_core.tools.consistency_check:main"
memory-audit-layout = "memory_core.tools.audit_project_layout:main"
memory-plan-residue = "memory_core.tools.audit_project_layout:plan_main"
memory-apply-residue-plan = "memory_core.tools.apply_residue_plan:main"
memory-ownership = "memory_core.tools.ownership_cli:main"
memory-verify-consumer = "memory_core.tools.verify_consumer:main"
memory-integrity-resign = "memory_core.tools.memory_integrity_resign:main"
memory-sync-versions = "memory_core.tools.version_sync:main"
memory-audit-daily = "memory_core.tools.daily_kb_audit:main"

[tool.setuptools.packages.find]
include = ["memory_core*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=memory_core --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["workspace", "templates", "memory_core/workspace"]


