[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-core"
version = "0.9.0"
description = "Independent memory hook core and gateway runtime."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
    "posthog>=3.0,<4.0",
]
license = "MIT"
authors = [
    { name = "busiji" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

keywords = ["memory", "hooks", "project-management", "schema"]

[project.urls]
Homepage = "https://github.com/hdot123/memory"
Repository = "https://github.com/hdot123/memory"
"Bug Tracker" = "https://github.com/hdot123/memory/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0",
    "pytest-rerunfailures>=14.0",
    "mypy>=1.10",
    "requests>=2.28",
    "pip-tools>=7.0",
    "deptry>=0.15",
    "vulture>=2.10",
    "pdoc>=14.0",
]

[project.scripts]
memory-promote = "memory_core.tools.promote_global_kb:main"
memory-init = "memory_core.tools.init_project_memory:main"
memory-migrate = "memory_core.tools.migrate_project_memory:main"
memory-validate = "memory_core.tools.validate_project_memory:main"
memory-hook-gateway = "memory_core.tools.memory_hook_gateway:main"
memory-factory-hooks = "memory_core.tools.factory_global_hooks:main"
memory-consistency-check = "memory_core.tools.consistency_check:main"
memory-audit-layout = "memory_core.tools.audit_project_layout:main"
memory-plan-residue = "memory_core.tools.audit_project_layout:plan_main"
memory-apply-residue-plan = "memory_core.tools.apply_residue_plan:main"
memory-ownership = "memory_core.tools.ownership_cli:main"
memory-verify-consumer = "memory_core.tools.verify_consumer:main"
memory-integrity-resign = "memory_core.tools.memory_integrity_resign:main"
memory-sync-versions = "memory_core.tools.version_sync:main"
memory-audit-daily = "memory_core.tools.daily_kb_audit:main"

[tool.setuptools.packages.find]
include = ["memory_core*", "workspace*"]

[tool.setuptools.package-data]
workspace = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=memory_core --cov-report=term-missing --cov-fail-under=15 --durations=10 --reruns 2"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["workspace", "templates", "memory_core/workspace"]

[[tool.mypy.overrides]]
module = "memory_core.tools.auto_capture"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.memory_hook_adapters.neutral_policy"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.error_logger"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.version_sync"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.adapter_toml_schema"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.task_dispatcher"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.resilient_orchestrator"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.memory_hook_integrity_verify"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.telemetry_bridge"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.verify_consumer"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.session_end_logger"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.hook_event_stats"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.memory_hook_adapters.default_runtime_profile"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.business_policy_checks"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.apply_residue_plan"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.memory_health_report"
strict = true

[[tool.mypy.overrides]]
module = "memory_core.tools.global_kb_init"
strict = true

[tool.deptry]
ignore = [
    "tomllib",  # stdlib in Python 3.11+, conditional import with tomli fallback
    "yaml",
]
exclude = [
    "tests",
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "memory_core.egg-info",
    "memory_core/workspace",
    "workspace",
]

[tool.deptry.per_rule_ignores]
DEP001 = [
    "memory_hook_adapters",
    "memory_hook_config",
    "memory_hook_core",
    "memory_hook_impls",
    "memory_hook_interfaces",
    "memory_hook_schema",
    "memory_hook_integrity_manifest",
    "cmux_hook_state",
    "_validation_constants",
    "yaml",
    "memory_hook_gateway",
    "tomllib",
]
DEP002 = [
    "pytest-cov",
    "mypy",
    "requests",
    "pytest-rerunfailures",
    "pip-tools",
    "deptry",
    "vulture",
    "pdoc",
]
DEP003 = ["yaml"]


